--- a/FriendFinder/app/public/home.html
+++ b/FriendFinder/app/public/home.html
@@ -21,18 +21,25 @@
     <div class="container">
 
         <div class="jumbotron">
-            <h1> <i class="far fa-grin-tongue-wink"></i> Friend Finder</h1>
+            <h1> Friend Finder  <i class="far fa-thumbs-up"></i></h1>
 
             <hr class="my-4">
             <h2>Make the first move...</h2>
-            <h2>Dating, friend-finding, and networking in one easy Survey. </h2>
+            <h2>Dating, friend-finding, and networking all in one easy Survey. </h2>
             <br>
 
 
             <!-- Button For Survey -->
-            <a class="btn btn-primary btn-lg" href="#" role="button">Go to Survey</a>
+            <a class="btn btn-primary btn-lg" href="./survey.html" role="button">Go to Survey</a>
         </div>
 
+        <footer>
+            <div>
+                <p>
+                    <a href="../data/friends.js">API Friends List</a> | <a href="https://github.com/jt227b/Friend-Finder.git">GitHub Repo</a>
+                </p>
+            </div>
+        </footer>
 
     </div>
 
