Finished Survey Page

--- a/FriendFinder/app/public/home.html
+++ b/FriendFinder/app/public/home.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        <link rel="shortcut icon" href="./like.png" />
 
 
     <title>Friend Finder</title>
@@ -21,16 +22,16 @@
     <div class="container">
 
         <div class="jumbotron">
-            <h1> Friend Finder  <i class="far fa-thumbs-up"></i></h1>
+            <h1><a href="https://fontmeme.com/fonts/new-facebook-font/"><img src="https://fontmeme.com/permalink/190502/5791c4516fa4b427f7eefff3326ff591.png" alt="new-facebook-font" border="0"> </a><i class="far fa-thumbs-up"></i></h1>
 
             <hr class="my-4">
-            <h2>Make the first move...</h2>
-            <h2>Dating, friend-finding, and networking all in one easy Survey. </h2>
+            <h3>Make the first move...</h3>
+            <h3>Dating, friend-finding, and networking all in one easy Survey. </h3>
             <br>
 
 
             <!-- Button For Survey -->
-            <a class="btn btn-primary btn-lg" href="./survey.html" role="button">Go to Survey</a>
+            <a class="btn btn-light btn-lg" href="./survey.html" role="button"><i class="far fa-sticky-note"></i> Go to Survey</a>
         </div>
 
         <footer>
