Finished Updating Friend Finder

--- a/FriendFinder/app/public/home.html
+++ b/FriendFinder/app/public/home.html
@@ -31,7 +31,7 @@
 
             <!-- Button For Survey -->
             <div>
-                <a href="./survey.html"><button type="button" class="btn btn-lg btn-primary">
+                <a href="./survey.html"><button type="button" class="btn btn-lg btn-light">
                     <h4><span class="glyphicon glyphicon-list-alt"></span><i class="far fa-sticky-note"></i> Go to Survey</h4>
                   </button></a>
               </div>
