--- a/FriendFinder/app/public/survey.html
+++ b/FriendFinder/app/public/survey.html
@@ -40,7 +40,7 @@
 
             <h4>Name (Required)</h4>
             <input type="text" id="name" class="form-control" required>
-
+            <br>
             <h4>Link to Photo Image (Required)</h4>
             <input type="text" id="photo" class="form-control" required>
 
@@ -188,7 +188,7 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h2 class="modal-title">
-                        <strong>Meet Your Friend</strong>
+                        <strong>You Found A Friend</strong>
                     </h2>
                 </div>
                 <div class="modal-body">
