--- a/app/public/home.html
+++ b/app/public/home.html
@@ -29,7 +29,7 @@
             <br>
 
 
-            <!-- Button For Survey -->
+            <!-- Button For Survey Fixed -->
             <div>
                 <a href="./survey.html"><button type="button" class="btn btn-lg btn-light">
                     <h4><span class="glyphicon glyphicon-list-alt"></span><i class="far fa-sticky-note"></i> Go to Survey</h4>
