--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -179,7 +179,7 @@
 
     </div>
 
-    <!-- Modal -->
+    <!-- Modal Fixed-->
     <div id="results-modal" class="modal fade" role="dialog">
         <div class="modal-dialog">
 
